--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: default
           <!-- Case for when no excerpt is defined -->
           {% endif %}
         </p>
-        <a class="btn continue" href="{{ post.url | prepend: site.url }}">ادامه‌ی مطلب </a>
+        <a class="btn continue" href="{{ post.url | prepend: site.baseurl }}">ادامه‌ی مطلب </a>
       </div>
     </div>
     {% endfor %}
@@ -27,6 +27,6 @@ layout: default
 
   {% include pagination.html %}
 
-  
+
   <!--<p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>-->
 </div>
